# TechnicMoveHub-pypi

./: README.md  main.py  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
Technicmovehub.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
technicmovehub/: __init__.py
